修复blog cms 的页面问题

--- a/sw-cms/cms-web/src/main/resources/templates/pc/ajax-index.html
+++ b/sw-cms/cms-web/src/main/resources/templates/pc/ajax-index.html
@@ -1,6 +1,4 @@
-
- <#if artList?? >
-					<#list artList as article>
+ @for(article in artList!){
 	<li>
 		<div class="am-gallery-item am_list_block">
 			<a href="###" class="am_img_bg"> <img class="am_img animated"
@@ -11,12 +9,12 @@
 	
 			<div class="am_listimg_info">
 				<span class="am-icon-heart"> 132</span><span class="am-icon-comments">
-					${article.hits!}</span><span class="am_imglist_time">20160102</span>
+					${article.hits!}</span><span class="am_imglist_time">${article.createdate!}</span>
 			</div>
 	
 		</div> <a class="am_imglist_user"><span class="am_imglist_user_ico"><img
 				src="${ctxPath!}/${article.image!}" alt=""></span><span
 			class="am_imglist_user_font">${article.title!}</span></a>
 	</li>
-	</#list>
-					</#if>
+@}
+
